--- a/css/style.css
+++ b/css/style.css
@@ -3529,3 +3529,57 @@ ul.chat-available-user li a:hover {
 .content-blog img {
     box-shadow: 0px 3px 2px #aab2bd;
 }
+
+/*email theme bk*/
+body.emailbody {
+    background: url("../img/connect/backemail.jpeg");
+    background-size: cover;
+}
+
+/*div for email*/
+div.absolute-center {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 1;
+  visibility: visible;
+  transition: all .5s;
+}
+
+.absolute-h3, .absolute-h5 {
+  padding: 10px 30px 10px 30px;
+  box-sizing: border-box;
+  background: white;
+  box-shadow: 0 0 5px 0 black;
+  font-family: 'Open Sans';
+  font-weight: 300;
+  text-align: center;
+  letter-spacing: 3px;
+}
+
+.absolute-h3 {
+font-size: 18px;
+}
+
+.absolute-h5 {
+font-size: 11px;
+}
+
+.absolute-center span#close {
+  position: absolute;
+  top: -15px;
+  left: -30px;
+  color: white;
+  font-size: 30px;
+  text-shadow: 0 0 5px black;
+  cursor: pointer;
+}
+
+.absolute-a{
+  background: white;
+  font-family: 'Open Sans';
+  font-weight: 300;
+  text-align: center;
+  letter-spacing: 3px;
+}
