--- a/css/style.css
+++ b/css/style.css
@@ -3545,6 +3545,27 @@ body.emailbody {
     background-size: cover;
 }
 
+/*email theme bk*/
+body.messydrawbody {
+    background: #FFFFFF;
+}
+body.messydrawbody iframe{
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    min-height: 600px;
+    border: none;
+
+    transition: opacity 500ms;
+    opacity: 1;
+    /* border: 5px solid #f5f5f5; */
+    /* box-sizing: content-box; */
+}
+body.messydrawbody .content-panel{
+    min-height: 600px;
+    padding-top: 5px;
+}
+
 /*div for email*/
 div.absolute-center {
   position: fixed;
@@ -3591,4 +3612,18 @@ font-size: 11px;
   font-weight: 300;
   text-align: center;
   letter-spacing: 3px;
+}
+
+/**/
+canvas{
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    border: none;
+}
+.p5Canvas{
+    margin: 0,auto;
 }
