--- a/css/style.css
+++ b/css/style.css
@@ -3656,10 +3656,18 @@ ul.paginationbox li a {
     float: left;
     padding: 8px 16px;
     text-decoration: none;
-    border: 1px solid blue;
-    border-radius:3px;
+    /*border: 1px solid blue;
+    border-radius:3px;*/
 }
 
 .paginationbox .currtive{
-    background-color: #7FFFAA;
+    background-color: #F2E800;
+    border-radius:20px;
+    font-weight: bold;
 }
+
+ul.paginationbox li a:hover {
+    background-color: #eaeaea;
+    border-radius:20px;
+    font-weight: bold;
+}   
